--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -648,16 +648,17 @@ lamassu:
         scheme: HTTP_HEADERS
         properties:
           Authorization: mobidatabw-ipl@nvbw.de
-    - systemId: mobility_ch
-      operatorId: MOB:Operator:mobility
-      operatorName: Mobility
-      codespace: MOB
-      url: "https://gbfs.prod.sharedmobility.ch/v2/gbfs/mobility/gbfs"
-      language: en
-      authentication:
-        scheme: HTTP_HEADERS
-        properties:
-          Authorization: mobidatabw-ipl@nvbw.de
+            # invaiid feed
+            #    - systemId: mobility_ch
+            #      operatorId: MOB:Operator:mobility
+            #      operatorName: Mobility
+            #      codespace: MOB
+            #      url: "https://gbfs.prod.sharedmobility.ch/v2/gbfs/mobility/gbfs"
+            #      language: en
+            #      authentication:
+            #        scheme: HTTP_HEADERS
+            #        properties:
+            #          Authorization: mobidatabw-ipl@nvbw.de
     - systemId: edrivecarsharing_ch
       operatorId: EDC:Operator:edrivecarsharing
       operatorName: edrive carsharing
