--- a/.env.local.example
+++ b/.env.local.example
@@ -18,6 +18,9 @@ LAMASSU_TIER_API_URL=http://example.org
 LAMASSU_TIER_USER=user
 LAMASSU_TIER_PASSWORD=secret
 
+# Credentials for sharedmobility.ch
+LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION=mail@domain
+
 # User and password from Deer
 DEER_USER=user
 DEER_PASSWORD=password
