activate provider stadtmobil_stuttgart

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ IPL_POSTGRES_USER=geoserver
 
 # x2gbfs variables
 X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:latest
-X2GBFS_PROVIDERS=deer,voi-raumobil,lastenvelo_fr,stadtmobil_suedbaden,my-e-car
+X2GBFS_PROVIDERS=deer,voi-raumobil,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_suedbaden,my-e-car
 X2GBFS_UPDATE_INTERVAL_SECONDS=60
 
 DEER_API_URL=https://deer.fleetster.de
