--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -78,25 +78,25 @@ lamassu:
     - systemId: nextbike_fg
       operatorId: NBK:Operator:nextbike
       operatorName: Nextbike
-      codespace: NBK
+      codespace: NBF
       url: "http://gbfs.nextbike.net/maps/gbfs/v2/nextbike_fg/gbfs.json"
       language: de
     - systemId: nextbike_ds
       operatorId: NBK:Operator:nextbike
       operatorName: Nextbike
-      codespace: NBK
+      codespace: NBD
       url: "http://gbfs.nextbike.net/maps/gbfs/v2/nextbike_ds/gbfs.json"
       language: de
     - systemId: nextbike_vn
       operatorId: NBK:Operator:nextbike
       operatorName: Nextbike
-      codespace: NBK
+      codespace: NBV
       url: "http://gbfs.nextbike.net/maps/gbfs/v2/nextbike_vn/gbfs.json"
       language: de
     - systemId: nextbike_eh
       operatorId: NBK:Operator:nextbike
       operatorName: Nextbike
-      codespace: NBK
+      codespace: NBE
       url: "http://gbfs.nextbike.net/maps/gbfs/v2/nextbike_eh/gbfs.json"
       language: de
     - systemId: bolt_karlsruhe
