--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -399,11 +399,15 @@ services:
       # Required to mount volumes for docker-in-docker executions
       - IPL_GTFS_IMPORTER_HOST_CUSTOM_SCRIPTS_DIR=${PWD}/etc/gtfs/
       - IPL_GTFS_IMPORTER_HOST_GTFS_OUTPUT_DIR=${PWD}/var/gtfs/
+      # directory where datasets should stored for publishing (Note: should be mounted as volume)
+      - WWW_ROOT_DIR=/var/www/
     volumes:
       # Make docker API accessible so we can start containers in jobs
       - /var/run/docker.sock:/var/run/docker.sock
       # mount storage dir so logs/assets are written to volume shared with dagaster-daemon/dagit
       - ./var/dagster/storage/:/opt/dagster/dagster_home/storage/
+      # mount www dir to republish downloaded datasets
+      - ./var/www/datasets/:/var/www/
     depends_on:
         pgbouncer:
           condition: service_healthy
