switch radvis download to official source

--- a/.env.local.example
+++ b/.env.local.example
@@ -82,3 +82,7 @@ PARK_API_SECRET_KEY=secret
 
 # Public ParkAPI URL
 PARK_API_PROJECT_URL=https://api.mobidata-bw.de/park-api
+
+# RadVIS credentials
+RADVIS_WFS_USER=user
+RADVIS_WFS_PASSWORD=secret
