add ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL env var

--- a/.env.local.example
+++ b/.env.local.example
@@ -86,3 +86,7 @@ PARK_API_PROJECT_URL=https://api.mobidata-bw.de/park-api
 # RadVIS credentials
 RADVIS_WFS_USER=user
 RADVIS_WFS_PASSWORD=secret
+
+# SVZBW DATEX2 Download URL
+ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL=https://url
+
