--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -404,6 +404,8 @@ services:
       # RadVIS Download credentials
       - RADVIS_WFS_USER=${RADVIS_WFS_USER:?missing/empty}
       - RADVIS_WFS_PASSWORD=${RADVIS_WFS_PASSWORD:?missing/empty}
+      # Roadworks download url
+      - ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL=${ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL:?missing/empty}
     volumes:
       # Make docker API accessible so we can start containers in jobs
       - /var/run/docker.sock:/var/run/docker.sock
