--- a/.env.local.example
+++ b/.env.local.example
@@ -32,6 +32,9 @@ VOI_PASSWORD=password
 # Url to the cantamen IXSI service. Note: this service is IP restricted
 CANTAMEN_IXSI_API_URL=http://example.org
 
+# Token for x2gbfs/stadtwerk_tauberfranken
+MOQO_API_TOKEN=token
+
 # A random password for pgbouncer clients (gtfs-api, geoserver, dagster, etc.)
 PGBOUNCER_POSTGRES_PASSWORD=secret
 
