--- a/etc/lamassu/application.properties
+++ b/etc/lamassu/application.properties
@@ -49,6 +49,9 @@ org.entur.lamassu.targetGbfsVersion=2.3
 ## Base URL for API (needed for URL transformations)
 org.entur.lamassu.baseUrl=${LAMASSU_BASE_URL}
 
+# How often should feed be updated (in case it's ttl is exceeded), in ms, default 6h
+org.entur.lamassu.feedupdateinterval=${LAMASSU_FEED_UPATE_INTERVAL_IN_MS:21600000}
+
 ## Host / IP of internal load balancer for internal endpoints (as seen from docker-compose containers)
 org.entur.lamassu.internalLoadBalancer=http://lamassu:8080
 
