--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ IPL_POSTGRES_PORT=5432
 IPL_POSTGRES_DB=geoserver
 IPL_POSTGRES_USER=geoserver
 
-# x2gbfs variables
-X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2024-04-22T11-45
+# x2gbfs variables (Note: when changing the providers, be sure to check if the image version supports them)
+X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2024-04-30t05-08
 X2GBFS_PROVIDERS=deer,voi-raumobil,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_karlsruhe,stadtmobil_suedbaden,my-e-car,stadtwerk_tauberfranken
 X2GBFS_UPDATE_INTERVAL_SECONDS=60
 
