move LAMASSU_FEED_UPATE_INTERVAL_IN_MS to .env

--- a/.env
+++ b/.env
@@ -14,6 +14,10 @@ LAMASSU_IMAGE=entur/lamassu:2024-04-29T06-37
 LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 LAMASSU_BASE_URL=http://localhost:8080/sharing
+
+# How often should feed be updated (in case it's ttl is exceeded) in milliseconds. Defaults to 21600000 (=6h) 
+LAMASSU_FEED_UPATE_INTERVAL_IN_MS=21600000
+
 # Authentication URLs for providers requiring OAuth2 authentication
 LAMASSU_BOLT_AUTH_URL=https://mds.bolt.eu/oauth2/token
 
