--- a/.env
+++ b/.env
@@ -95,7 +95,7 @@ OCPDB_POSTGRES_HOST=ocpdb-db
 OCPDB_CELERY_BROKER_URL=amqp://ocpdb-rabbitmq
 OCPDB_PRIVACY_URL=https://www.nvbw.de/datenschutz
 OCPDB_LEGAL_NOTICE_URL=https://www.nvbw.de/impressum
-OCPDB_IMAGE=ghcr.io/binary-butterfly/ocpdb:latest
+OCPDB_IMAGE=ghcr.io/binary-butterfly/ocpdb:1.0.0
 OCPDB_DB_IMAGE=postgis/postgis:15-3.4-alpine
 
 # ParkAPI
