fix!: ipl-db: don't bind on host port 5432

--- a/.env
+++ b/.env
@@ -20,9 +20,8 @@ LAMASSU_BOLT_AUTH_URL=https://mds.bolt.eu/oauth2/token
 # redis variables
 REDIS_MEMORY_MB=1024
 
-# postgis variables
+# ipl-db variables
 IPL_POSTGIS_IMAGE=postgis/postgis:15-3.3-alpine
-IPL_POSTGRES_PORT=5432
 IPL_POSTGRES_DB=geoserver
 IPL_POSTGRES_USER=geoserver
 
