--- a/.env
+++ b/.env
@@ -68,6 +68,7 @@ PGBOUNCER_POSTGRES_USER=postgres
 # gtfs-api variables
 IPL_GTFS_API_IMAGE=postgrest/postgrest:v12.2.0
 IPL_GTFS_API_PORT=4000
+IPL_GTFS_API_ADMIN_PORT=4002
 IPL_GTFS_API_PUBLIC_BASE_URL=http://localhost:8080/gtfs
 # > A hard limit to the number of rows PostgREST will fetch from a view, table, or stored procedure. Limits payload size for accidental or malicious requests.
 # We expect those people who want to mass-analyse GTFS data to just download the entire GTFS dataset.
