--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DOCKER_LOCAL_USER=1000:1000
 # https://en.wikipedia.org/wiki/Tz_database
 TZ=Europe/Berlin
 
-TRANSFORMER_PROXY_IMAGE=ghcr.io/mobidata-bw/ipl-proxy:2024-06-19T06-45
+TRANSFORMER_PROXY_IMAGE=ghcr.io/mobidata-bw/ipl-proxy:2024-06-19t06-45
 TRANSFORMER_PROXY_PORT=8400
 
 LAMASSU_IMAGE=entur/lamassu:2024-04-29T06-37
