pin dagster image versions

--- a/.env
+++ b/.env
@@ -39,9 +39,9 @@ VOI_API_URL=https://lsd.raumobil.net/Broker/grid?platform=mobidata-bw&source=voi
 
 # dagster variables
 DAGSTER_POSTGRES_IMAGE=postgres:15.7-bullseye
-DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:latest
-DAGSTER_DAGIT_IMAGE=ghcr.io/mobidata-bw/dagster-dagit:latest
-DAGSTER_DAEMON_IMAGE=ghcr.io/mobidata-bw/dagster-daemon:latest
+DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:2024-05-17t14-01
+DAGSTER_DAGIT_IMAGE=ghcr.io/mobidata-bw/dagster-dagit:2024-05-17t14-01
+DAGSTER_DAEMON_IMAGE=ghcr.io/mobidata-bw/dagster-daemon:2024-05-17t14-01
 DAGSTER_POSTGRES_USER=postgres_user
 DAGSTER_POSTGRES_DB=postgres_db
 
