--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ TZ=Europe/Berlin
 TRANSFORMER_PROXY_IMAGE=ghcr.io/mobidata-bw/ipl-proxy:2024-07-10T06-56
 TRANSFORMER_PROXY_PORT=8400
 
-LAMASSU_IMAGE=entur/lamassu:2024-06-19T21-49
+LAMASSU_IMAGE=entur/lamassu:2024-07-08T06-22
 LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 LAMASSU_BASE_URL=http://localhost:8080/sharing
@@ -25,7 +25,7 @@ LAMASSU_FEED_CACHE_MINIMUM_INTERVAL_IN_S=21600
 REDIS_MEMORY_MB=1024
 
 # ipl-db variables
-IPL_POSTGIS_IMAGE=postgis/postgis:15-3.3-alpine
+IPL_POSTGIS_IMAGE=postgis/postgis:15-3.4-alpine
 IPL_POSTGRES_DB=geoserver
 IPL_POSTGRES_USER=geoserver
 
@@ -39,9 +39,9 @@ VOI_API_URL=https://lsd.raumobil.net/Broker/grid?platform=mobidata-bw&source=voi
 
 # dagster variables
 DAGSTER_POSTGRES_IMAGE=postgres:15.7-bullseye
-DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:2024-05-17T14-01
-DAGSTER_DAGIT_IMAGE=ghcr.io/mobidata-bw/dagster-dagit:2024-05-17T14-01
-DAGSTER_DAEMON_IMAGE=ghcr.io/mobidata-bw/dagster-daemon:2024-05-17T14-01
+DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:2024-07-05t15-39
+DAGSTER_DAGIT_IMAGE=ghcr.io/mobidata-bw/dagster-dagit:2024-07-05t15-39
+DAGSTER_DAEMON_IMAGE=ghcr.io/mobidata-bw/dagster-daemon:2024-07-05t15-39
 DAGSTER_POSTGRES_USER=postgres_user
 DAGSTER_POSTGRES_DB=postgres_db
 
