add stadtmobil_rhein-neckar feed

--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -33,6 +33,12 @@ lamassu:
       codespace: SMK
       url: "file:///var/gbfs/feeds/stadtmobil_karlsruhe/gbfs.json"
       language: de
+    - systemId: stadtmobil_rhein-neckar
+      operatorId: SMK:Operator:stadtmobil_rhein-neckar
+      operatorName: Stadtmobil Rhein-Neckar
+      codespace: SMR
+      url: "file:///var/gbfs/feeds/stadtmobil_rhein-neckar/gbfs.json"
+      language: de
     - systemId: stadtmobil_suedbaden
       operatorId: SMS:Operator:stadtmobil_suedbaden
       operatorName: Stadtmobil Südbaden
