--- a/.env.local.example
+++ b/.env.local.example
@@ -31,6 +31,8 @@ VOI_PASSWORD=password
 
 # Url to the cantamen IXSI service. Note: this service is IP restricted
 CANTAMEN_IXSI_API_URL=http://example.org
+#Timeout for cantamen IXSI websocket connection in seconds
+CANTAMEN_IXSI_API_TIMEOUT=timeout
 
 # Token for x2gbfs/stadtwerk_tauberfranken
 MOQO_API_TOKEN=token
