Add flinkster gbfs feed

--- a/.env.local.example
+++ b/.env.local.example
@@ -29,6 +29,10 @@ DEER_PASSWORD=password
 VOI_USER=user
 VOI_PASSWORD=password
 
+# User and password for Flinkster API
+FLINKSTER_CLIENT_ID=client_id
+FLINKSTER_SECRET=secret
+
 # Url to the cantamen IXSI service. Note: this service is IP restricted
 CANTAMEN_IXSI_API_URL=http://example.org
 #Timeout for cantamen IXSI websocket connection in seconds
