--- a/.env
+++ b/.env
@@ -30,8 +30,8 @@ IPL_POSTGRES_DB=geoserver
 IPL_POSTGRES_USER=geoserver
 
 # x2gbfs variables (Note: when changing the providers, be sure to check if the image version supports them)
-X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2024-09-03T06-22
-X2GBFS_PROVIDERS=deer,voi-raumobil,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_karlsruhe,stadtmobil_rhein-neckar,stadtmobil_suedbaden,my-e-car,stadtwerk_tauberfranken
+X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2024-09-05T12-13
+X2GBFS_PROVIDERS=deer,voi-raumobil,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_karlsruhe,stadtmobil_rhein-neckar,stadtmobil_suedbaden,my-e-car,stadtwerk_tauberfranken,flinkster
 X2GBFS_UPDATE_INTERVAL_SECONDS=60
 
 DEER_API_URL=https://deer.fleetster.de
