Update dagster-pipeline image in .env

--- a/.env
+++ b/.env
@@ -39,9 +39,9 @@ VOI_API_URL=https://lsd.raumobil.net/Broker/grid?platform=mobidata-bw&source=voi
 
 # dagster variables
 DAGSTER_POSTGRES_IMAGE=postgres:15.8-bullseye
-DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:2024-07-05t15-39
-DAGSTER_DAGIT_IMAGE=ghcr.io/mobidata-bw/dagster-dagit:2024-07-05t15-39
-DAGSTER_DAEMON_IMAGE=ghcr.io/mobidata-bw/dagster-daemon:2024-07-05t15-39
+DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:2024-09-06T14-22
+DAGSTER_DAGIT_IMAGE=ghcr.io/mobidata-bw/dagster-dagit:2024-09-06T14-22
+DAGSTER_DAEMON_IMAGE=ghcr.io/mobidata-bw/dagster-daemon:2024-09-06T14-22
 DAGSTER_POSTGRES_USER=postgres_user
 DAGSTER_POSTGRES_DB=postgres_db
 
